--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WeatherApp</string>
+    <string name="app_name">Weather App</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -11,7 +11,9 @@
     <string name="title_activity_weather_detail">Weather Detail</string>
     <string name="weather_condition">Weather Condition</string>
     <string name="not_internet">Not internet</string>
-    <string name="cities_list">Cities List:</string>
+    <string name="cities_list">Cities List</string>
     <string name="about">About</string>
-
+    <string name="title_activity_about">About</string>
+    <string name="setting_message">Hello Settings!</string>
+    <string name="title_activity_temporal">TemporalActivity</string>
 </resources>
